--- a/emacs.org
+++ b/emacs.org
@@ -4011,8 +4011,8 @@ I also, on occasion, have a need to use serial console access.  The way to
 access this is via =serial-term=.  If using something like =ansi-term= or
 =serial-term=, keep in mind the following keybindings.  You probably normally
 want to be in /terminal character mode/.
-- ~C-x C-j~ Terminal line mode
-- ~C-x C-k~ Terminal character mode.
+- ~C-c C-j~ / ~term-line-mode~ Terminal line mode.
+- ~C-c C-k~ / ~term-char-mode~ Terminal character mode.
 
 Some notes:
 - One of the helpers here is =eshell-here=, which will open an =eshell= buffer
@@ -4025,6 +4025,24 @@ Resources:
 - [[https://www.masteringemacs.org/article/complete-guide-mastering-eshell][Mastering Emacs: Mastering Eshell]] by Mickey Petersen
 - [[http://howardism.org/Technical/Emacs/eshell-fun.html][Eschewing Zshell for Emacs Shell]] by Howard Abrams
 
+#+NAME: multi-term
+#+begin_src emacs-lisp
+(defun forge/multi-term-here ()
+  "Open up a multi-term window."
+  (interactive)
+  (let* ((parent (if (buffer-file-name) (file-name-directory (buffer-file-name)) (getenv "HOME")))
+         (height (/ (window-total-height) 3))
+         (name (car (last (split-string parent "/" t)))))
+    (split-window-vertically (- height))
+    (other-window 1)
+    (multi-term)))
+
+(use-package multi-term
+  :config
+  (setq multi-term-program "/bin/zsh"))
+#+end_src
+
+#+NAME: eshell
 #+begin_src emacs-lisp
 (use-package eshell
   :straight (:type built-in)
