--- a/emacs.org
+++ b/emacs.org
@@ -3035,7 +3035,7 @@ Will open a notmuch search buffer of the search results."
                                  (:name "Needs attention" :key "!" :query "tag:inbox and ( tag:abuse or tag:flagged )")
                                  (:name "Sent"            :key "s" :query "tag:sent")
                                  (:name "Attachments"     :key "A" :query "tag:attachment")
-                                 (:name "Bulk"            :key "B" :query "tag:bulk and tag:unread")
+                                 (:name "Bulk"            :key "B" :query "tag:unread and ( tag:bulk or tag:spam )")
                                  (:name "Meeting Invites" :key "c" :query "mimetype:text/calendar"))))
 
 #+end_src
