add ibuffer section for remote files

--- a/emacs.org
+++ b/emacs.org
@@ -1548,12 +1548,7 @@ the window contents.
       ("Lisp"
        (mode . emacs-lisp-mode))
       ("Dired" (mode . dired-mode))
-      ("Commands"
-       (or
-        (mode . shell-mode)
-        (mode . eshell-mode)
-        (mode . term-mode)
-        (mode . compilation-mode)))
+      ("SSH"   (filename . "^/ssh:*"))
       ("Magit"
        (or
         (mode . magit-status-mode)
@@ -1561,6 +1556,12 @@ the window contents.
         (name . "\\*magit")
         (name . "magit-")
         (name . "git-monitor")))
+      ("Commands"
+       (or
+        (mode . shell-mode)
+        (mode . eshell-mode)
+        (mode . term-mode)
+        (mode . compilation-mode)))
       ("Emacs"
        (or
         (filename . ".emacs.d/emacs.org")
