delete pass window after quitting

--- a/emacs.org
+++ b/emacs.org
@@ -3756,7 +3756,9 @@ passwords to the clipboard.
   :after auth-source)
 
 ;;
-(use-package pass)
+(use-package pass
+  :config
+  (advice-add 'pass-quit :after 'forge/delete-window))
 
 ;; https://github.com/ecraven/ivy-pass
 (use-package ivy-pass
