--- a/emacs.org
+++ b/emacs.org
@@ -3408,13 +3408,17 @@ Miscellaneous notes:
                                  (file+olp+datetree "~/forge/journal.org")
                                  "* %U - %?\n" )
 
+                                ("i" "Inbox" entry
+                                 (file "inbox.org")
+                                 "* TODO %? \n:PROPERTIES:\n:CAPTURED:  %U\n:END:\nReference: %a\n")
+
                                 ("t" "To do" entry
                                  (file+headline "~/forge/journal.org" "Inbox")
                                  "* TODO %? \n:PROPERTIES:\n:CAPTURED:  %U\n:END:\nReference: %a\n" :prepend t)
 
-                                ("M" "Meeting" entry
+                                ("n" "Meeting notes" entry
                                  (file+olp+datetree "~/forge/journal.org")
-                                 "* MEETING %? \n:PROPERTIES:\n:CAPTURED:  %U\n:END:\n%U\nAttendees:\n\nAgenda:\n\nDiscussion:\n" :clock-in t :clock-resume t)
+                                 "* Notes - %a \n:PROPERTIES:\n:CAPTURED:  %U\n:END:\n%U\nAttendees:\n\nAgenda:\n\nDiscussion:\n" :clock-in t :clock-resume t)
 
                                 ("j" "Journal" entry
                                  (file+olp+datetree "~/forge/journal.org")
