Move org-id to its own heading and comment out ol-git-link

--- a/emacs.org
+++ b/emacs.org
@@ -3526,6 +3526,15 @@ associated with the entry.
   (setq org-crypt-disable-auto-save t)
   (setq org-crypt-key user-full-name))
 #+end_src
+*** Org ID
+#+begin_src emacs-lisp
+(use-package org-id
+  :straight (org-contrib :includes org-id)
+  :custom
+  (org-id-method 'uuid)
+  (org-id-link-to-org-use-id 'create-if-interactive-and-no-custom-id)
+  (org-id-locations-file (expand-file-name "org/id-locations.el" forge-state-dir)))
+#+end_src
 *** Helper functions
 #+begin_src emacs-lisp
 (defun forge/capture-current-song ()
@@ -3678,7 +3687,7 @@ It will not remove entries from the source org file."
 - [[https://github.com/yjwen/org-reveal][Org Export to Reveal JS]]
 
 #+begin_src emacs-lisp
-(use-package ol-git-link :straight (org-contrib :includes ol-git-link))
+;;(use-package ol-git-link :straight (org-contrib :includes ol-git-link))
 
 (use-package ol-eww :straight (org-contrib :includes ol-eww))
 
@@ -3694,13 +3703,6 @@ It will not remove entries from the source org file."
 
 (use-package org-bullets
   :hook (org-mode . org-bullets-mode))
-
-(use-package org-id
-  :straight (org-contrib :includes org-id)
-  :custom
-  (org-id-method 'uuid)
-  (org-id-link-to-org-use-id 'create-if-interactive-and-no-custom-id)
-  (org-id-locations-file (expand-file-name "org/id-locations.el" forge-state-dir)))
 
 (use-package htmlize)
 
